--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Tienda_Online
 spring.data.mongodb.uri=mongodb://localhost:27017/tiendaOnline
 server.port=8080
+spring.web.resources.static-locations=file:uploads/
